# openrouter-free-scanner

./: .gitignore  README.md  pyproject.toml  setup.py
openrouterfreescanner/: __init__.py  main.py  proxy.py
